ensure the github corner is behind the nav

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -47,3 +47,7 @@
   height: auto;
   border: 0;
 }
+
+.wy-nav-content-wrap.shift {
+  z-index: 1;
+}
